global: fix progress bar for videos
Closes #142.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -482,9 +482,9 @@
             /// Audio level in Chromium.
             /._9sTVb:not(#z) {
                 div { c: 0 0 ac }
-                ::-webkit-slider {
-                    &-runnable-track { c: 0 0 #88888840 }
-                }
+                ::-webkit-slider-runnable-track { c: 0 0 #88888840 }
+                /// Media viewer videos.
+                /._3y8EC::-webkit-slider-runnable-track { c: 0 0 t }
             }
             /// Audio message length in Chromium.
             /._3L8ub .Q8uSF { c: 0 0 ac }
