left: fix rounded corners for avatar in settings

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -565,7 +565,7 @@
     // Global -> Avatars.
     /// Profile and Chat avatars (without quoted contacts);
     /// New group and 'No blocked contacts yet' icons.
-    ._1WliW, ._1jJLh, ._2Lev2 {
+    ._2UkYn, ._1WliW, ._1jJLh, ._2Lev2 {
         rad: var(--avatar-r) i;
         c: 0 0 bg;
         > img { rad: var(--avatar-r) i }
