alerts: fix colors for 'low battery' state

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1080,14 +1080,13 @@
                 if ( alerts ==  'notifications' ) { display: none i }
             }
             /// Phone battery low.
-            /// TODO: Fix the selectors.
-            ._2t3oV {
+            ._2BhJP {
                 * { c: red }
                 [data-icon ^= 'chevron-'] path { v: red }
                 [data-icon ^= 'alert-'] path { fill: red }
             }
             /// Close icon.
-            ._1cvvW path { fill-opacity: 0.55 }
+            [data-icon = 'x-light'] path { fill-opacity: 0.55 }
             /// Alerts -> Remove all alerts.
             if ( alerts ==  'hide' ) { display: none i }
         }
