--- a/wa.user.styl
+++ b/wa.user.styl
@@ -436,6 +436,7 @@
         /// Global -> Active buttons.
         .rAUz7 {
             path:not([fill = '#009588']) { fill-opacity: 0.55 }
+            &:active { c: 0 0 bg }
             &._3TbsN {
                 c: 0 0 bd;
                 /// Chat -> Reset opacity for attach menu items.
