--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1878,17 +1878,20 @@
                 fill: ac;
             }
         }
-        // /// Emoji picker.
+        /// Emoji picker.
         /._23EHf {
             c: 0 bd hl;
             box-shadow: inset 0 1px bd i;
             &::before { content: none }
             /// Upload preview emoji picker.
-            &.aWTXv {
+            /._1k6Uw {
                 margin-bottom: 8px;
                 border: 1px solid bd i;
+                c: 0 0 t;
                 rad: r i;
                 box-shadow: bsh i;
+                &::before { box-shadow: none i }
+                > div { rad: r i; box-shadow: none i }
             }
         }
         /// Input area.
@@ -1912,18 +1915,20 @@
         /// Emoji/gif/sticker menu.
         ._1vDUw {
             c: 0 bd;
-            /// Header.
-            ._1qUma {
+            /// Header in chat/popout.
+            ._1qUma, /._3ZkhL._3NVMy ._1qUma {
                 c: 0 0 hl;
                 box-shadow: inset 0 1px bd, inset 0 -1px bd;
                 div[style *= 'background'] { c: 0 0 ac }
-                > :not(._2wn58) {
+                > :not(._2DzXb)  {
                     c: cm;
                     /// Inactive tabs.
                     &:not(:hover) path { fill: cm }
                     /// Active tabs.
-                    &:hover, ../ ._2wn58 { c: fg }
+                    &:hover, ../ ._2DzXb { c: fg }
                 }
+                /// Gif -> Fix hidden text. @upstream
+                /._35chb { overflow: unset i }
                 /// Active menu.
                 ._1Wbpa {
                     height: 1px;
