--- a/wa.user.css
+++ b/wa.user.css
@@ -6,7 +6,7 @@
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.css
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
-@version      2.3.3
+@version      2.3.4
 @license      MIT
 ==/UserStyle== */
 
@@ -48,7 +48,7 @@
     --c-m-hover: 0.6s;
     --c-m-delay: 1.2s;
     --ui-font: "custom font", "Segoe UI", "Helvetica Neue", Helvetica, "Lucida Grande", Arial, Ubuntu, Cantarell, "Fira Sans", sans-serif;
-    --version: "Dark-WhatsApp v2.3.3 — March 27th, 2020";
+    --version: "Dark-WhatsApp v2.3.4 — March 28th, 2020";
     --message: "Another update is out, report broken things on GitHub so that we can fix them. 🎉 🥳 I published an important update about my userstyles, please read it: ";
     --changes: "https://vednoc.me/blog/the-end-of-an-era";
   }
@@ -89,7 +89,7 @@
     background-color: var(--darker) !important;
   }
   body ::-moz-range-progress {
-    background-color: var(--blue) !important;
+    background-color: var(--accent) !important;
   }
   body ::-moz-range-thumb {
     background-color: var(--accent) !important;
@@ -311,6 +311,9 @@
   body .rAUz7 path:not([fill = "#009588"]) {
     fill-opacity: 0.55;
   }
+  body .rAUz7:active {
+    background-color: var(--dark) !important;
+  }
   body .rAUz7._3TbsN {
     background-color: var(--darker) !important;
   }
@@ -357,10 +360,17 @@
     background-color: var(--accent) !important;
   }
   ._9sTVb:not(#z) div {
+    height: 1px;
     background-color: var(--accent) !important;
   }
   ._9sTVb:not(#z) ::-webkit-slider-runnable-track {
     background-color: rgba(136,136,136,0.251) !important;
+  }
+  ._9sTVb:not(#z) ::-moz-range-track {
+    background-color: rgba(136,136,136,0.251) !important;
+  }
+  ._3y8EC::-webkit-slider-runnable-track {
+    background-color: var(--t) !important;
   }
   ._3L8ub .Q8uSF {
     background-color: var(--accent) !important;
@@ -422,12 +432,14 @@
   #app > div .app ._2rI9W {
     margin-right: -1px;
   }
+  ._2UkYn,
   ._1WliW,
   ._1jJLh,
   ._2Lev2 {
     border-radius: var(--avatar-r) !important;
     background-color: var(--dark) !important;
   }
+  ._2UkYn > img,
   ._1WliW > img,
   ._1jJLh > img,
   ._2Lev2 > img {
@@ -989,16 +1001,16 @@
   #side > header + span[class] ._35DHA [data-icon ^= "alert-"] path {
     fill: var(--blue);
   }
-  #side > header + span[class] ._2t3oV * {
+  #side > header + span[class] ._2BhJP * {
     color: var(--red) !important;
   }
-  #side > header + span[class] ._2t3oV [data-icon ^= "chevron-"] path {
+  #side > header + span[class] ._2BhJP [data-icon ^= "chevron-"] path {
     fill: var(--red) !important;
   }
-  #side > header + span[class] ._2t3oV [data-icon ^= "alert-"] path {
+  #side > header + span[class] ._2BhJP [data-icon ^= "alert-"] path {
     fill: var(--red);
   }
-  #side > header + span[class] ._1cvvW path {
+  #side > header + span[class] [data-icon = "x-light"] path {
     fill-opacity: 0.55;
   }
   div[class *= "gQzdc"] {
@@ -1923,11 +1935,19 @@
   ._23EHf::before {
     content: none;
   }
-  ._23EHf.aWTXv {
+  ._1k6Uw {
     margin-bottom: 8px;
     border: 1px solid var(--darker) !important;
+    background-color: var(--t) !important;
     border-radius: var(--radius) !important;
     box-shadow: var(--bshadow) !important;
+  }
+  ._1k6Uw::before {
+    box-shadow: none !important;
+  }
+  ._1k6Uw > div {
+    border-radius: var(--radius) !important;
+    box-shadow: none !important;
   }
   #main > footer > div:first-child {
     border-top: 1px solid var(--darker);
@@ -1957,24 +1977,34 @@
   #main > footer ._1vDUw {
     border-color: var(--darker) !important;
   }
-  #main > footer ._1vDUw ._1qUma {
+  #main > footer ._1vDUw ._1qUma,
+  ._3ZkhL._3NVMy ._1qUma {
     background-color: var(--darken) !important;
     box-shadow: inset 0 1px var(--darker), inset 0 -1px var(--darker);
   }
-  #main > footer ._1vDUw ._1qUma div[style *= "background"] {
+  #main > footer ._1vDUw ._1qUma div[style *= "background"],
+  ._3ZkhL._3NVMy ._1qUma div[style *= "background"] {
     background-color: var(--accent) !important;
   }
-  #main > footer ._1vDUw ._1qUma > :not(._2wn58) {
+  #main > footer ._1vDUw ._1qUma > :not(._2DzXb),
+  ._3ZkhL._3NVMy ._1qUma > :not(._2DzXb) {
     color: var(--lighter) !important;
   }
-  #main > footer ._1vDUw ._1qUma > :not(._2wn58):not(:hover) path {
+  #main > footer ._1vDUw ._1qUma > :not(._2DzXb):not(:hover) path,
+  ._3ZkhL._3NVMy ._1qUma > :not(._2DzXb):not(:hover) path {
     fill: var(--lighter);
   }
-  #main > footer ._1vDUw ._1qUma > :not(._2wn58):hover,
-  #main > footer ._1vDUw ._1qUma ._2wn58 {
+  #main > footer ._1vDUw ._1qUma > :not(._2DzXb):hover,
+  ._3ZkhL._3NVMy ._1qUma > :not(._2DzXb):hover,
+  #main > footer ._1vDUw ._1qUma ._2DzXb,
+  ._3ZkhL._3NVMy ._1qUma ._2DzXb {
     color: var(--light) !important;
   }
-  #main > footer ._1vDUw ._1qUma ._1Wbpa {
+  ._35chb {
+    overflow: unset !important;
+  }
+  #main > footer ._1vDUw ._1qUma ._1Wbpa,
+  ._3ZkhL._3NVMy ._1qUma ._1Wbpa {
     height: 1px;
     background-color: var(--accent) !important;
   }
