--- a/wa.user.styl
+++ b/wa.user.styl
@@ -992,10 +992,7 @@
             }
         }
         /// Global -> Down arrow animation.
-        &[data-icon = 'down'] {
-            fill-opacity: 0.55;
-            path { v: white }
-        }
+        &[data-icon = 'down'] { fill-opacity: 0.55 }
     }
 
     // Global -> Context menu.
