modals: fix a few things in upload preview area

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1838,7 +1838,9 @@
                 c: 0 0 ac;
                 box-shadow: bsh;
             }
-            /// Add file.
+            /// Document file.
+            /.GpvML { c: 0 0 bg }
+            /// Add file button.
             &._1ypOz {
                 c: ac 0 bg;
                 box-shadow: inner i;
@@ -1881,7 +1883,7 @@
             box-shadow: inset 0 1px bd i;
             &::before { content: none }
             /// Upload preview emoji picker.
-            /._1k6Uw {
+            /._1k6Uw._2CjPi {
                 margin-bottom: 8px;
                 border: 1px solid bd i;
                 c: 0 0 t;
@@ -2048,7 +2050,7 @@
                 /// Reset upload preview.
                 >  div:nth-child(2) > div:nth-child(2) {
                     flex: 0 0 calc(100% - 80px) i;
-                    margin-left: calc(-25% + 80px);
+                    margin-left: calc(-30% + 80px);
                 }
                 /// Expand contacts.
                 > div:nth-child(3) {
