chat: fix audio length for incoming messages

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -489,7 +489,7 @@
                 /._3y8EC::-webkit-slider-runnable-track { c: 0 0 t }
             }
             /// Audio message length in Chromium.
-            /._3L8ub .Q8uSF { c: 0 0 ac }
+            /._3L8ub, /.bB3vH { .Q8uSF { c: 0 0 ac }}
             // Audio level in Firefox.
             /.Q8uSF {
                 c: 0 0 t;
