--- a/wa.user.styl
+++ b/wa.user.styl
@@ -5,7 +5,7 @@
 @homepageURL  https://github.com/vednoc/dark-whatsapp
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.styl
-@version      2.3.4
+@version      2.3.5
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
 @license      MIT
 @preprocessor stylus
@@ -187,8 +187,8 @@
         --ui-font   : ui_font, 'Segoe UI', 'Helvetica Neue', Helvetica,
             'Lucida Grande', Arial, Ubuntu, Cantarell, 'Fira Sans', sans-serif;
 
-        --version   : 'Dark-WhatsApp v2.3.4 — March 28th, 2020';
-        --message   : 'Another update is out, report broken things on GitHub so that we can fix them. 🎉 🥳 I published an important update about my userstyles, please read it: ';
+        --version   : 'Dark-WhatsApp v2.3.5 — April 1st, 2020';
+        --message   : 'Transparent emoji images are back! 🎉 🥳 I published an important update about my userstyles, please read it: ';
         --changes   : 'https://vednoc.me/blog/the-end-of-an-era';
     }
 
