--- a/wa.user.styl
+++ b/wa.user.styl
@@ -697,7 +697,7 @@
         }
         /// Text.
         .X5OiD { c: 0 0 bd }
-        ._26BZr, .JmH7x { c: cm }
+        ._26BZr, .JmH7x, ._2HiNF { c: cm  }
         ._26BZr { font-weight: normal i }
         ._2yVvV { c: fg }
         /// Buttons.
