feat: fix styles for blurred contacts/media

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1154,7 +1154,7 @@
             [style *= 'height'] > div > div[class] {
                 filter: blur(6px);
                 transition: filter 300ms ease;
-                &._3mMX1, &:hover { filter: blur(0px) }
+                &._1f1zm, &:hover { filter: blur(0px) }
             }
         }
     }
@@ -1566,7 +1566,7 @@
                     }
                 }
                 /// HACK: Reset blur for audio msg avatars.
-                &[style *= 'width'] > img.jZhyM { filter: none i }
+                &[style *= 'width'] > img._3FXB1 { filter: none i }
                 /// HACK: Reset img timestamp wrapper.
                 img[src] + div { pointer-events: none }
             }
