chat: fix 'failed to send this msg' error

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1764,9 +1764,9 @@
         /// Right.
         &-out {
             /// (1) Not stickers; (2) Not error ("couldn't send this message").
-            > div:not(._1rK-b) > div:not(._19l4G) { c: fg 0 right }
+            > div:not(._1rK-b) > div:not(.YsGwW) { c: fg 0 right }
             /// "Couldn't send this message" tweaks.
-            ._19l4G:not(#z) {
+            .YsGwW:not(#z) {
                 /// Popout message.
                 > :first-child:not(:last-child) {
                     c: fg 0 hl;
