develop chat: fix 'unknown sender' alert

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1979,15 +1979,12 @@
             border-top: 1px solid bd;
             c: 0 0 hl;
         }
-        /// Alerts -> Not in your contacts.
-        ._2Pown {
+        /// Alerts -> 'This sender is not in your contact list'.
+        .TYhk9 {
             c: fg bd hl;
             [role = 'button'] {
                 c: cm 0 bd;
-                &:hover {
-                    c: fg;
-                    box-shadow: 0 4px 8px sh;
-                }
+                &:hover { c: fg; box-shadow: bsh }
             }
         }
         /// Alerts -> Not a group member / Only admins can send messages.
