--- a/wa.user.styl
+++ b/wa.user.styl
@@ -782,12 +782,14 @@
         /// Contact/group -> Profile image.
         ._8icek { fill-opacity: 0.55 }
         /// View group invite.
-        ._2Vo52 {
-            /// Header.
-            .XOIaT { c: 0 0 hl }
-            /// Text.
-            ._1WSDe { c: fg }
-            ._3WFBR, .vJCph, ._2oG62 { c: cm }
+        ._2S_XV {
+            c: fg 0 hl;
+            * { c: cm }
+            + div {
+                /// Text.
+                span:first-child { c: fg }
+                span:last-child { c: cm }
+            }
         }
         /// Send/view contacts.
         .WOXAS, ._1v8mQ {
